# ledger-duck

./: database.py  emailduck.py  main.py  pyproject.toml  schemas.py
api/: build-this-garbage-fire.bat  pyproject.toml  run-container.bat
api/api/: main.py
api/api/routers/: auth.py  categories.py  transactions.py
api/routers/: accounts.py  bills.py
restapi/: Dockerfile  build-image.bat
restapi/api/: main.py
restapi/api/routers/: accounts.py  auth.py  bills.py  categories.py  transactions.py
routers/: accounts.py  auth.py  bills.py  categories.py  transactions.py
web-client/: .gitignore  package-lock.json  package.json
web-client/src/: hooks.server.js
web-client/src/routes/(auth)/login/: +page.svelte
web-client/src/routes/(auth)/signup/: +page.server.js  +page.svelte
