[tool.poetry]
name = "ledger-duck"
version = "0.1.0"
description = ""
authors = ["Jason Sanders <fictitiouswizard@gmail.com>"]
readme = "README.md"
packages = [{include = "ledger_duck"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.89.1"
uvicorn = "^0.20.0"
sqlmodel = "^0.0.8"
psycopg2 = "^2.9.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
